src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    ERROR_DATE
    ERROR_FLOAT
    ESPACIO
    SALTO
    TAB

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> A_LLAVE empresas COMA version COMA firma_digital C_LLAVE
Rule 2     sigma -> A_LLAVE version COMA empresas COMA firma_digital C_LLAVE
Rule 3     sigma -> A_LLAVE version COMA firma_digital COMA empresas C_LLAVE
Rule 4     sigma -> A_LLAVE firma_digital COMA empresas COMA version C_LLAVE
Rule 5     sigma -> A_LLAVE firma_digital COMA version COMA empresas C_LLAVE
Rule 6     sigma -> A_LLAVE empresas COMA firma_digital COMA version C_LLAVE
Rule 7     empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH
Rule 8     i_empresa -> <empty>
Rule 9     version -> VERSION DOS_PUNTOS STRING
Rule 10    version -> VERSION DOS_PUNTOS NULL
Rule 11    firma_digital -> FIRMA_DIG DOS_PUNTOS STRING
Rule 12    firma_digital -> FIRMA_DIG DOS_PUNTOS NULL
Rule 13    empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
Rule 14    empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
Rule 15    empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
Rule 16    empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
Rule 17    i_link -> <empty>
Rule 18    c_empresa -> <empty>
Rule 19    nombre_empresa -> N_EMPRESA DOS_PUNTOS STRING
Rule 20    fundacion -> FUNDACION DOS_PUNTOS INT
Rule 21    direccion -> DIRECCION DOS_PUNTOS A_LLAVE direcciones C_LLAVE COMA
Rule 22    direccion -> DIRECCION DOS_PUNTOS NULL COMA
Rule 23    direcciones -> calle COMA ciudad COMA pais
Rule 24    calle -> CALLE DOS_PUNTOS STRING
Rule 25    ciudad -> CIUDAD DOS_PUNTOS STRING
Rule 26    pais -> PAIS DOS_PUNTOS STRING
Rule 27    i_anuales -> I_ANUALES DOS_PUNTOS FLOAT
Rule 28    pyme -> PYME DOS_PUNTOS BOOL
Rule 29    link -> LINK DOS_PUNTOS URL
Rule 30    link -> LINK DOS_PUNTOS NULL
Rule 31    departamentos -> L_DEPARTAMENTOS DOS_PUNTOS A_CORCH departamento C_CORCH
Rule 32    departamento -> A_LLAVE nombre_dpto COMA jefe COMA subdepartamentos C_LLAVE
Rule 33    departamento -> A_LLAVE jefe COMA nombre_dpto COMA subdepartamentos C_LLAVE
Rule 34    departamento -> A_LLAVE jefe COMA subdepartamentos COMA nombre_dpto C_LLAVE
Rule 35    departamento -> A_LLAVE nombre_dpto COMA subdepartamentos COMA jefe C_LLAVE
Rule 36    departamento -> A_LLAVE subdepartamentos COMA jefe COMA nombre_dpto C_LLAVE
Rule 37    departamento -> A_LLAVE subdepartamentos COMA nombre_dpto COMA jefe C_LLAVE
Rule 38    departamento -> A_LLAVE nombre_dpto COMA jefe COMA subdepartamentos C_LLAVE COMA departamento
Rule 39    departamento -> A_LLAVE jefe COMA nombre_dpto COMA subdepartamentos C_LLAVE COMA departamento
Rule 40    departamento -> A_LLAVE jefe COMA subdepartamentos COMA nombre_dpto C_LLAVE COMA departamento
Rule 41    departamento -> A_LLAVE nombre_dpto COMA subdepartamentos COMA jefe C_LLAVE COMA departamento
Rule 42    departamento -> A_LLAVE subdepartamentos COMA jefe COMA nombre_dpto C_LLAVE COMA departamento
Rule 43    departamento -> A_LLAVE subdepartamentos COMA nombre_dpto COMA jefe C_LLAVE COMA departamento
Rule 44    nombre_dpto -> NOMBRE DOS_PUNTOS STRING
Rule 45    jefe -> JEFE DOS_PUNTOS STRING
Rule 46    jefe -> JEFE DOS_PUNTOS NULL
Rule 47    subdepartamentos -> L_SUBDEPARTAMENTOS DOS_PUNTOS A_CORCH subdepartamento C_CORCH
Rule 48    subdepartamento -> A_LLAVE nombre_subdpto COMA jefe COMA empleados C_LLAVE
Rule 49    subdepartamento -> A_LLAVE nombre_subdpto COMA empleados COMA jefe C_LLAVE
Rule 50    subdepartamento -> A_LLAVE jefe COMA nombre_subdpto COMA empleados C_LLAVE
Rule 51    subdepartamento -> A_LLAVE jefe COMA empleados COMA nombre_subdpto C_LLAVE
Rule 52    subdepartamento -> A_LLAVE empleados COMA nombre_subdpto COMA jefe C_LLAVE
Rule 53    subdepartamento -> A_LLAVE empleados COMA jefe COMA nombre_subdpto C_LLAVE
Rule 54    subdepartamento -> A_LLAVE nombre_subdpto COMA jefe COMA empleados C_LLAVE COMA subdepartamento
Rule 55    subdepartamento -> A_LLAVE nombre_subdpto COMA empleados COMA jefe C_LLAVE COMA subdepartamento
Rule 56    subdepartamento -> A_LLAVE jefe COMA nombre_subdpto COMA empleados C_LLAVE COMA subdepartamento
Rule 57    subdepartamento -> A_LLAVE jefe COMA empleados COMA nombre_subdpto C_LLAVE COMA subdepartamento
Rule 58    subdepartamento -> A_LLAVE empleados COMA nombre_subdpto COMA jefe C_LLAVE COMA subdepartamento
Rule 59    subdepartamento -> A_LLAVE empleados COMA jefe COMA nombre_subdpto C_LLAVE COMA subdepartamento
Rule 60    subdepartamento -> A_LLAVE nombre_subdpto COMA empleados C_LLAVE
Rule 61    subdepartamento -> A_LLAVE empleados COMA nombre_subdpto C_LLAVE
Rule 62    subdepartamento -> A_LLAVE nombre_subdpto COMA empleados C_LLAVE COMA subdepartamento
Rule 63    subdepartamento -> A_LLAVE empleados COMA nombre_subdpto C_LLAVE COMA subdepartamento
Rule 64    nombre_subdpto -> NOMBRE DOS_PUNTOS STRING
Rule 65    empleados -> L_EMPLEADOS DOS_PUNTOS A_CORCH i_emp empleado c_emp C_CORCH
Rule 66    empleados -> L_EMPLEADOS DOS_PUNTOS A_CORCH C_CORCH
Rule 67    empleados -> L_EMPLEADOS DOS_PUNTOS NULL
Rule 68    i_emp -> <empty>
Rule 69    c_emp -> <empty>
Rule 70    empleado -> A_LLAVE nombre_emp COMA edad COMA cargo COMA salario COMA activo COMA fecha_contrat COMA proyectos C_LLAVE
Rule 71    empleado -> A_LLAVE nombre_emp COMA edad COMA cargo COMA salario COMA activo COMA fecha_contrat COMA proyectos C_LLAVE COMA empleado
Rule 72    nombre_emp -> NOMBRE DOS_PUNTOS STRING
Rule 73    edad -> EDAD DOS_PUNTOS INT
Rule 74    edad -> EDAD DOS_PUNTOS NULL
Rule 75    cargo -> CARGO DOS_PUNTOS cargos
Rule 76    cargos -> PROD_ANALYST
Rule 77    cargos -> PROJ_MANAGER
Rule 78    cargos -> MARKETING
Rule 79    cargos -> DEVELOPER
Rule 80    cargos -> DEVOPS
Rule 81    cargos -> DB_ADMIN
Rule 82    cargos -> UX_DESIGNER
Rule 83    salario -> SALARIO DOS_PUNTOS FLOAT
Rule 84    activo -> ACTIVO DOS_PUNTOS BOOL
Rule 85    fecha_contrat -> FECHA_CONTRAT DOS_PUNTOS DATE
Rule 86    proyectos -> L_PROYECTOS DOS_PUNTOS A_CORCH i_prjct proyecto c_prjct C_CORCH
Rule 87    proyectos -> L_PROYECTOS DOS_PUNTOS NULL
Rule 88    i_prjct -> <empty>
Rule 89    c_prjct -> <empty>
Rule 90    proyecto -> A_LLAVE i_row nombre_prjct COMA estado COMA fecha_inicio COMA fecha_fin c_row C_LLAVE
Rule 91    proyecto -> A_LLAVE i_row nombre_prjct COMA estado COMA fecha_inicio c_row C_LLAVE
Rule 92    proyecto -> A_LLAVE i_row nombre_prjct COMA estado COMA fecha_inicio COMA fecha_fin c_row C_LLAVE COMA proyecto
Rule 93    proyecto -> A_LLAVE i_row nombre_prjct COMA estado COMA fecha_inicio c_row C_LLAVE COMA proyecto
Rule 94    i_row -> <empty>
Rule 95    c_row -> <empty>
Rule 96    nombre_prjct -> NOMBRE DOS_PUNTOS STRING
Rule 97    estado -> ESTADO DOS_PUNTOS estados
Rule 98    estado -> ESTADO DOS_PUNTOS NULL
Rule 99    estados -> TO_DO
Rule 100   estados -> IN_PROGRESS
Rule 101   estados -> CANCELED
Rule 102   estados -> DONE
Rule 103   estados -> ON_HOLD
Rule 104   fecha_inicio -> FECHA_INICIO DOS_PUNTOS DATE
Rule 105   fecha_fin -> FECHA_FIN DOS_PUNTOS DATE
Rule 106   fecha_fin -> FECHA_FIN DOS_PUNTOS NULL

Terminals, with rules where they appear

ACTIVO               : 84
A_CORCH              : 7 31 47 65 66 86
A_LLAVE              : 1 2 3 4 5 6 13 14 15 16 21 32 33 34 35 36 37 38 39 40 41 42 43 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 70 71 90 91 92 93
BOOL                 : 28 84
CALLE                : 24
CANCELED             : 101
CARGO                : 75
CIUDAD               : 25
COMA                 : 1 1 2 2 3 3 4 4 5 5 6 6 13 13 13 13 13 14 14 14 14 15 15 15 15 15 15 16 16 16 16 16 21 22 23 23 32 32 33 33 34 34 35 35 36 36 37 37 38 38 38 39 39 39 40 40 40 41 41 41 42 42 42 43 43 43 48 48 49 49 50 50 51 51 52 52 53 53 54 54 54 55 55 55 56 56 56 57 57 57 58 58 58 59 59 59 60 61 62 62 63 63 70 70 70 70 70 70 71 71 71 71 71 71 71 90 90 90 91 91 92 92 92 92 93 93 93
C_CORCH              : 7 31 47 65 66 86
C_LLAVE              : 1 2 3 4 5 6 13 14 15 16 21 32 33 34 35 36 37 38 39 40 41 42 43 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 70 71 90 91 92 93
DATE                 : 85 104 105
DB_ADMIN             : 81
DEVELOPER            : 79
DEVOPS               : 80
DIRECCION            : 21 22
DONE                 : 102
DOS_PUNTOS           : 7 9 10 11 12 19 20 21 22 24 25 26 27 28 29 30 31 44 45 46 47 64 65 66 67 72 73 74 75 83 84 85 86 87 96 97 98 104 105 106
EDAD                 : 73 74
ERROR                : 
ERROR_DATE           : 
ERROR_FLOAT          : 
ESPACIO              : 
ESTADO               : 97 98
FECHA_CONTRAT        : 85
FECHA_FIN            : 105 106
FECHA_INICIO         : 104
FIRMA_DIG            : 11 12
FLOAT                : 27 83
FUNDACION            : 20
INT                  : 20 73
IN_PROGRESS          : 100
I_ANUALES            : 27
JEFE                 : 45 46
LINK                 : 29 30
L_DEPARTAMENTOS      : 31
L_EMPLEADOS          : 65 66 67
L_EMPRESAS           : 7
L_PROYECTOS          : 86 87
L_SUBDEPARTAMENTOS   : 47
MARKETING            : 78
NOMBRE               : 44 64 72 96
NULL                 : 10 12 22 30 46 67 74 87 98 106
N_EMPRESA            : 19
ON_HOLD              : 103
PAIS                 : 26
PROD_ANALYST         : 76
PROJ_MANAGER         : 77
PYME                 : 28
SALARIO              : 83
SALTO                : 
STRING               : 9 11 19 24 25 26 44 45 64 72 96
TAB                  : 
TO_DO                : 99
URL                  : 29
UX_DESIGNER          : 82
VERSION              : 9 10
error                : 

Nonterminals, with rules where they appear

activo               : 70 71
c_emp                : 65
c_empresa            : 13 14 15 16
c_prjct              : 86
c_row                : 90 91 92 93
calle                : 23
cargo                : 70 71
cargos               : 75
ciudad               : 23
departamento         : 31 38 39 40 41 42 43
departamentos        : 13 14 15 16
direccion            : 13 14 15 16
direcciones          : 21
edad                 : 70 71
empleado             : 65 71
empleados            : 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
empresa              : 7 15 16
empresas             : 1 2 3 4 5 6
estado               : 90 91 92 93
estados              : 97
fecha_contrat        : 70 71
fecha_fin            : 90 92
fecha_inicio         : 90 91 92 93
firma_digital        : 1 2 3 4 5 6
fundacion            : 13 14 15 16
i_anuales            : 13 14 15 16
i_emp                : 65
i_empresa            : 7 15 16
i_link               : 13 15
i_prjct              : 86
i_row                : 90 91 92 93
jefe                 : 32 33 34 35 36 37 38 39 40 41 42 43 48 49 50 51 52 53 54 55 56 57 58 59
link                 : 13 15
nombre_dpto          : 32 33 34 35 36 37 38 39 40 41 42 43
nombre_emp           : 70 71
nombre_empresa       : 13 14 15 16
nombre_prjct         : 90 91 92 93
nombre_subdpto       : 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
pais                 : 23
proyecto             : 86 92 93
proyectos            : 70 71
pyme                 : 13 14 15 16
salario              : 70 71
sigma                : 0
subdepartamento      : 47 54 55 56 57 58 59 62 63
subdepartamentos     : 32 33 34 35 36 37 38 39 40 41 42 43
version              : 1 2 3 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . A_LLAVE empresas COMA version COMA firma_digital C_LLAVE
    (2) sigma -> . A_LLAVE version COMA empresas COMA firma_digital C_LLAVE
    (3) sigma -> . A_LLAVE version COMA firma_digital COMA empresas C_LLAVE
    (4) sigma -> . A_LLAVE firma_digital COMA empresas COMA version C_LLAVE
    (5) sigma -> . A_LLAVE firma_digital COMA version COMA empresas C_LLAVE
    (6) sigma -> . A_LLAVE empresas COMA firma_digital COMA version C_LLAVE

    A_LLAVE         shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> A_LLAVE . empresas COMA version COMA firma_digital C_LLAVE
    (2) sigma -> A_LLAVE . version COMA empresas COMA firma_digital C_LLAVE
    (3) sigma -> A_LLAVE . version COMA firma_digital COMA empresas C_LLAVE
    (4) sigma -> A_LLAVE . firma_digital COMA empresas COMA version C_LLAVE
    (5) sigma -> A_LLAVE . firma_digital COMA version COMA empresas C_LLAVE
    (6) sigma -> A_LLAVE . empresas COMA firma_digital COMA version C_LLAVE
    (7) empresas -> . L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH
    (9) version -> . VERSION DOS_PUNTOS STRING
    (10) version -> . VERSION DOS_PUNTOS NULL
    (11) firma_digital -> . FIRMA_DIG DOS_PUNTOS STRING
    (12) firma_digital -> . FIRMA_DIG DOS_PUNTOS NULL

    L_EMPRESAS      shift and go to state 6
    VERSION         shift and go to state 7
    FIRMA_DIG       shift and go to state 8

    empresas                       shift and go to state 3
    version                        shift and go to state 4
    firma_digital                  shift and go to state 5

state 3

    (1) sigma -> A_LLAVE empresas . COMA version COMA firma_digital C_LLAVE
    (6) sigma -> A_LLAVE empresas . COMA firma_digital COMA version C_LLAVE

    COMA            shift and go to state 9


state 4

    (2) sigma -> A_LLAVE version . COMA empresas COMA firma_digital C_LLAVE
    (3) sigma -> A_LLAVE version . COMA firma_digital COMA empresas C_LLAVE

    COMA            shift and go to state 10


state 5

    (4) sigma -> A_LLAVE firma_digital . COMA empresas COMA version C_LLAVE
    (5) sigma -> A_LLAVE firma_digital . COMA version COMA empresas C_LLAVE

    COMA            shift and go to state 11


state 6

    (7) empresas -> L_EMPRESAS . DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH

    DOS_PUNTOS      shift and go to state 12


state 7

    (9) version -> VERSION . DOS_PUNTOS STRING
    (10) version -> VERSION . DOS_PUNTOS NULL

    DOS_PUNTOS      shift and go to state 13


state 8

    (11) firma_digital -> FIRMA_DIG . DOS_PUNTOS STRING
    (12) firma_digital -> FIRMA_DIG . DOS_PUNTOS NULL

    DOS_PUNTOS      shift and go to state 14


state 9

    (1) sigma -> A_LLAVE empresas COMA . version COMA firma_digital C_LLAVE
    (6) sigma -> A_LLAVE empresas COMA . firma_digital COMA version C_LLAVE
    (9) version -> . VERSION DOS_PUNTOS STRING
    (10) version -> . VERSION DOS_PUNTOS NULL
    (11) firma_digital -> . FIRMA_DIG DOS_PUNTOS STRING
    (12) firma_digital -> . FIRMA_DIG DOS_PUNTOS NULL

    VERSION         shift and go to state 7
    FIRMA_DIG       shift and go to state 8

    version                        shift and go to state 15
    firma_digital                  shift and go to state 16

state 10

    (2) sigma -> A_LLAVE version COMA . empresas COMA firma_digital C_LLAVE
    (3) sigma -> A_LLAVE version COMA . firma_digital COMA empresas C_LLAVE
    (7) empresas -> . L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH
    (11) firma_digital -> . FIRMA_DIG DOS_PUNTOS STRING
    (12) firma_digital -> . FIRMA_DIG DOS_PUNTOS NULL

    L_EMPRESAS      shift and go to state 6
    FIRMA_DIG       shift and go to state 8

    empresas                       shift and go to state 17
    firma_digital                  shift and go to state 18

state 11

    (4) sigma -> A_LLAVE firma_digital COMA . empresas COMA version C_LLAVE
    (5) sigma -> A_LLAVE firma_digital COMA . version COMA empresas C_LLAVE
    (7) empresas -> . L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH
    (9) version -> . VERSION DOS_PUNTOS STRING
    (10) version -> . VERSION DOS_PUNTOS NULL

    L_EMPRESAS      shift and go to state 6
    VERSION         shift and go to state 7

    empresas                       shift and go to state 19
    version                        shift and go to state 20

state 12

    (7) empresas -> L_EMPRESAS DOS_PUNTOS . A_CORCH i_empresa empresa C_CORCH

    A_CORCH         shift and go to state 21


state 13

    (9) version -> VERSION DOS_PUNTOS . STRING
    (10) version -> VERSION DOS_PUNTOS . NULL

    STRING          shift and go to state 22
    NULL            shift and go to state 23


state 14

    (11) firma_digital -> FIRMA_DIG DOS_PUNTOS . STRING
    (12) firma_digital -> FIRMA_DIG DOS_PUNTOS . NULL

    STRING          shift and go to state 24
    NULL            shift and go to state 25


state 15

    (1) sigma -> A_LLAVE empresas COMA version . COMA firma_digital C_LLAVE

    COMA            shift and go to state 26


state 16

    (6) sigma -> A_LLAVE empresas COMA firma_digital . COMA version C_LLAVE

    COMA            shift and go to state 27


state 17

    (2) sigma -> A_LLAVE version COMA empresas . COMA firma_digital C_LLAVE

    COMA            shift and go to state 28


state 18

    (3) sigma -> A_LLAVE version COMA firma_digital . COMA empresas C_LLAVE

    COMA            shift and go to state 29


state 19

    (4) sigma -> A_LLAVE firma_digital COMA empresas . COMA version C_LLAVE

    COMA            shift and go to state 30


state 20

    (5) sigma -> A_LLAVE firma_digital COMA version . COMA empresas C_LLAVE

    COMA            shift and go to state 31


state 21

    (7) empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH . i_empresa empresa C_CORCH
    (8) i_empresa -> .

    A_LLAVE         reduce using rule 8 (i_empresa -> .)

    i_empresa                      shift and go to state 32

state 22

    (9) version -> VERSION DOS_PUNTOS STRING .

    COMA            reduce using rule 9 (version -> VERSION DOS_PUNTOS STRING .)
    C_LLAVE         reduce using rule 9 (version -> VERSION DOS_PUNTOS STRING .)


state 23

    (10) version -> VERSION DOS_PUNTOS NULL .

    COMA            reduce using rule 10 (version -> VERSION DOS_PUNTOS NULL .)
    C_LLAVE         reduce using rule 10 (version -> VERSION DOS_PUNTOS NULL .)


state 24

    (11) firma_digital -> FIRMA_DIG DOS_PUNTOS STRING .

    COMA            reduce using rule 11 (firma_digital -> FIRMA_DIG DOS_PUNTOS STRING .)
    C_LLAVE         reduce using rule 11 (firma_digital -> FIRMA_DIG DOS_PUNTOS STRING .)


state 25

    (12) firma_digital -> FIRMA_DIG DOS_PUNTOS NULL .

    COMA            reduce using rule 12 (firma_digital -> FIRMA_DIG DOS_PUNTOS NULL .)
    C_LLAVE         reduce using rule 12 (firma_digital -> FIRMA_DIG DOS_PUNTOS NULL .)


state 26

    (1) sigma -> A_LLAVE empresas COMA version COMA . firma_digital C_LLAVE
    (11) firma_digital -> . FIRMA_DIG DOS_PUNTOS STRING
    (12) firma_digital -> . FIRMA_DIG DOS_PUNTOS NULL

    FIRMA_DIG       shift and go to state 8

    firma_digital                  shift and go to state 33

state 27

    (6) sigma -> A_LLAVE empresas COMA firma_digital COMA . version C_LLAVE
    (9) version -> . VERSION DOS_PUNTOS STRING
    (10) version -> . VERSION DOS_PUNTOS NULL

    VERSION         shift and go to state 7

    version                        shift and go to state 34

state 28

    (2) sigma -> A_LLAVE version COMA empresas COMA . firma_digital C_LLAVE
    (11) firma_digital -> . FIRMA_DIG DOS_PUNTOS STRING
    (12) firma_digital -> . FIRMA_DIG DOS_PUNTOS NULL

    FIRMA_DIG       shift and go to state 8

    firma_digital                  shift and go to state 35

state 29

    (3) sigma -> A_LLAVE version COMA firma_digital COMA . empresas C_LLAVE
    (7) empresas -> . L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH

    L_EMPRESAS      shift and go to state 6

    empresas                       shift and go to state 36

state 30

    (4) sigma -> A_LLAVE firma_digital COMA empresas COMA . version C_LLAVE
    (9) version -> . VERSION DOS_PUNTOS STRING
    (10) version -> . VERSION DOS_PUNTOS NULL

    VERSION         shift and go to state 7

    version                        shift and go to state 37

state 31

    (5) sigma -> A_LLAVE firma_digital COMA version COMA . empresas C_LLAVE
    (7) empresas -> . L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH

    L_EMPRESAS      shift and go to state 6

    empresas                       shift and go to state 38

state 32

    (7) empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa . empresa C_CORCH
    (13) empresa -> . A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> . A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> . A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> . A_LLAVE nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa

    A_LLAVE         shift and go to state 40

    empresa                        shift and go to state 39

state 33

    (1) sigma -> A_LLAVE empresas COMA version COMA firma_digital . C_LLAVE

    C_LLAVE         shift and go to state 41


state 34

    (6) sigma -> A_LLAVE empresas COMA firma_digital COMA version . C_LLAVE

    C_LLAVE         shift and go to state 42


state 35

    (2) sigma -> A_LLAVE version COMA empresas COMA firma_digital . C_LLAVE

    C_LLAVE         shift and go to state 43


state 36

    (3) sigma -> A_LLAVE version COMA firma_digital COMA empresas . C_LLAVE

    C_LLAVE         shift and go to state 44


state 37

    (4) sigma -> A_LLAVE firma_digital COMA empresas COMA version . C_LLAVE

    C_LLAVE         shift and go to state 45


state 38

    (5) sigma -> A_LLAVE firma_digital COMA version COMA empresas . C_LLAVE

    C_LLAVE         shift and go to state 46


state 39

    (7) empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa . C_CORCH

    C_CORCH         shift and go to state 47


state 40

    (13) empresa -> A_LLAVE . nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> A_LLAVE . nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> A_LLAVE . nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> A_LLAVE . nombre_empresa COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (19) nombre_empresa -> . N_EMPRESA DOS_PUNTOS STRING

    N_EMPRESA       shift and go to state 49

    nombre_empresa                 shift and go to state 48

state 41

    (1) sigma -> A_LLAVE empresas COMA version COMA firma_digital C_LLAVE .

    $end            reduce using rule 1 (sigma -> A_LLAVE empresas COMA version COMA firma_digital C_LLAVE .)


state 42

    (6) sigma -> A_LLAVE empresas COMA firma_digital COMA version C_LLAVE .

    $end            reduce using rule 6 (sigma -> A_LLAVE empresas COMA firma_digital COMA version C_LLAVE .)


state 43

    (2) sigma -> A_LLAVE version COMA empresas COMA firma_digital C_LLAVE .

    $end            reduce using rule 2 (sigma -> A_LLAVE version COMA empresas COMA firma_digital C_LLAVE .)


state 44

    (3) sigma -> A_LLAVE version COMA firma_digital COMA empresas C_LLAVE .

    $end            reduce using rule 3 (sigma -> A_LLAVE version COMA firma_digital COMA empresas C_LLAVE .)


state 45

    (4) sigma -> A_LLAVE firma_digital COMA empresas COMA version C_LLAVE .

    $end            reduce using rule 4 (sigma -> A_LLAVE firma_digital COMA empresas COMA version C_LLAVE .)


state 46

    (5) sigma -> A_LLAVE firma_digital COMA version COMA empresas C_LLAVE .

    $end            reduce using rule 5 (sigma -> A_LLAVE firma_digital COMA version COMA empresas C_LLAVE .)


state 47

    (7) empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH .

    COMA            reduce using rule 7 (empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH .)
    C_LLAVE         reduce using rule 7 (empresas -> L_EMPRESAS DOS_PUNTOS A_CORCH i_empresa empresa C_CORCH .)


state 48

    (13) empresa -> A_LLAVE nombre_empresa . COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> A_LLAVE nombre_empresa . COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> A_LLAVE nombre_empresa . COMA fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> A_LLAVE nombre_empresa . COMA fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa

    COMA            shift and go to state 50


state 49

    (19) nombre_empresa -> N_EMPRESA . DOS_PUNTOS STRING

    DOS_PUNTOS      shift and go to state 51


state 50

    (13) empresa -> A_LLAVE nombre_empresa COMA . fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> A_LLAVE nombre_empresa COMA . fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> A_LLAVE nombre_empresa COMA . fundacion COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> A_LLAVE nombre_empresa COMA . fundacion COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (20) fundacion -> . FUNDACION DOS_PUNTOS INT

    FUNDACION       shift and go to state 53

    fundacion                      shift and go to state 52

state 51

    (19) nombre_empresa -> N_EMPRESA DOS_PUNTOS . STRING

    STRING          shift and go to state 54


state 52

    (13) empresa -> A_LLAVE nombre_empresa COMA fundacion . COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> A_LLAVE nombre_empresa COMA fundacion . COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> A_LLAVE nombre_empresa COMA fundacion . COMA direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> A_LLAVE nombre_empresa COMA fundacion . COMA direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa

    COMA            shift and go to state 55


state 53

    (20) fundacion -> FUNDACION . DOS_PUNTOS INT

    DOS_PUNTOS      shift and go to state 56


state 54

    (19) nombre_empresa -> N_EMPRESA DOS_PUNTOS STRING .

    COMA            reduce using rule 19 (nombre_empresa -> N_EMPRESA DOS_PUNTOS STRING .)


state 55

    (13) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA . direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA . direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA . direccion i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA . direccion i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (21) direccion -> . DIRECCION DOS_PUNTOS A_LLAVE direcciones C_LLAVE COMA
    (22) direccion -> . DIRECCION DOS_PUNTOS NULL COMA

    DIRECCION       shift and go to state 58

    direccion                      shift and go to state 57

state 56

    (20) fundacion -> FUNDACION DOS_PUNTOS . INT

    INT             shift and go to state 59


state 57

    (13) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion . i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa
    (14) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion . i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa
    (15) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion . i_anuales COMA pyme COMA i_link link COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (16) empresa -> A_LLAVE nombre_empresa COMA fundacion COMA direccion . i_anuales COMA pyme COMA departamentos C_LLAVE c_empresa COMA i_empresa empresa
    (27) i_anuales -> . I_ANUALES DOS_PUNTOS FLOAT

    I_ANUALES       shift and go to state 61

    i_anuales                      shift and go to state 60

state 58

    (21) direccion -> DIRECCION . DOS_PUNTOS A_LLAVE direcciones C_LLAVE COMA
    (22) direccion -> DIRECCION . DOS_PUNTOS NULL COMA

    DOS_PUNTOS      shift and go to state 62


state 59

    (20) fundacion -> FUNDACION DOS_PUNTOS INT .

    COMA            reduce using rule 20 (fundacion -> FUNDACION DOS_PUNTOS INT .)


state 60

